// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HandleErrorMixin handleError returns data key with errors 1`] = `
Object {
  "config": undefined,
  "data": Object {
    "errors": Object {},
    "message": "An unexpected error has occurred. Please try again.",
  },
  "headers": undefined,
  "status": 500,
  "statusText": "Internal Server Error",
}
`;

exports[`HandleErrorMixin handleError returns data key with errors 2`] = `
Object {
  "config": Object {},
  "data": Object {
    "errors": Object {},
    "message": "An unexpected error has occurred. Please try again.",
  },
  "headers": undefined,
  "status": 500,
  "statusText": "Internal Server Error",
}
`;

exports[`HandleErrorMixin handleError returns data key with errors 3`] = `
Object {
  "data": Object {
    "errors": Object {
      "key": Array [],
    },
  },
}
`;

exports[`HandleErrorMixin handleError returns data key with errors 4`] = `
Object {
  "config": Object {},
  "data": Object {
    "errors": Object {},
    "message": "hello foo bar",
  },
  "headers": Object {},
  "status": 422,
  "statusText": "Unprocessable Entity",
}
`;

exports[`HandleErrorMixin handleError returns data key with errors 5`] = `
Object {
  "config": Object {},
  "data": Object {
    "errors": Object {},
    "message": "An unexpected error has occurred. Please try again.",
  },
  "headers": Object {},
  "status": 400,
  "statusText": "Bad Request",
}
`;
